Mon Jul 07 17:45:20 2025  Jiri (George) Lebl <jirka@5z.com>

	* src/compil.c, src/geloutput.c, src/genius.c, src/calc.c: Fix a
	  couple of minor issues, fix command line parsing, fix some warnings

Thu Jul 03 18:00:31 2025  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* lib/number_theory/primes.gel: Update for the newest limit (exceeds
	  one more prime)

Mon Dec 09 12:40:16 2024  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* lib/number_theory.gel: Update with the newest Mersenne prime

Mon Sep 09 19:26:40 2024  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Fix a NULL dereference when plotting a curve in 3D

Tue Oct 03 23:23:52 2023  Jiri (George) Lebl <jirka@5z.com>

	* lib/calculus/integration.gel: Add TrapezoidRule, LeftHandRule,
	  RightHandRule
	
	* help/C/genius.xml: Document the new functions

	* src/geniustests.txt: add some tests 

Tue Oct 03 22:58:01 2023  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: The shortcut of inputting just the function name
	  into plotting accepts named constants without trying to call them
	  with an argument.

Wed Jul 19 17:18:25 2023  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* gtkextra/gtkplotps.c: Fix drawing points in poscript/PDF

Tue Mar 28 09:36:23 2023  Jiri (George) Lebl <jirka@5z.com>

	* examples/euler-method-graphs-exp.gel: Make sure we do computations
	  with floats to avoid running out of memory with something like
	  g(x,y)=y^2

Tue Mar 28 09:30:30 2023  Jiri (George) Lebl <jirka@5z.com>

	* examples/euler-method-graphs-exp.gel: Improve and make more
	  customizable

Wed Feb 08 23:02:43 2023  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: shut up warning, make graphing window be owned by
	  their parent, make things work more nicely on something like i3wm

	* src/gnome-genius.c: used fclose on popened stream, whoops

Wed Apr 20 15:46:47 2022  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: Update to newest data from GIMPS
