@@ -1,3 +1,8 @@
+Sat Aug 09 16:01:31 2025  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: Fix an undocumented behavior, fix
+	  possible reentrancy condition, fix warning
+
 Mon Jul 07 17:45:20 2025  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/compil.c, src/geloutput.c, src/genius.c, src/calc.c: Fix a
